https://numworx.atlassian.net/browse/DWOPLAY-472
voorbereiding:
tekstvakpanel selectable let op seal()
tekstvakpanel.visibility ook naar de popupfacade. Het knopje is dan ook onzichtbaar

git-svn-id: https://svn.science.uu.nl/repos/project.fisme.java/DwoPlayer/GWT/trunk@28188 58dd2db4-0f11-0410-9df4-da15f00f50bd